<resources>
    <string name="app_name">MISA.CCL</string>
    <string name="close_app_overview">Bỏ qua</string>
    <string name="next_app_overview">Tiếp theo</string>
    <string name="confirm_account">Bạn chưa có tài khoản?</string>
    <string name="question_account">Bạn đã có tài khoản?</string>
    <string name="login">Đăng nhập</string>
    <string name="confirm_next">TIẾP TỤC</string>
    <string name="selection_shop_type">Chọn loại quán</string>
    <string name="next_shop_type">Tiếp tục</string>
    <string name="register_account">Đăng ký</string>
    <string name="register_confirm">Xong</string>
    <string name="notification_confirm">Khi bấm nút Đăng ký đồng nghĩa với việc bạn đã đọc, hiểu và đồng ý với <font color="#0072bb">thỏa thuận sử dụng dịch vụ CUKCUK.vn</font></string>
    <string name="login_with_phone"><font size="15">Đăng nhập bằng</font> \n<font size="18">Số điện thoại hoặc email</font></string>
    <string name="phone_email_account">Số điện thoại hoặc email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="notification_forgot_password">Nhập số điện thoại hoặc email mà bạn đã đăng ký sử dụng, chúng tôi sẽ gửi hướng dẫn lấy lại mật khẩu</string>
    <string name="facebook_app_id">150550333505424</string>
    <string name="login_with_facebook"><font size="18">Đăng nhập bằng Facebook</font></string>
    <string name="menu">Thực đơn</string>
    <string name="success">XONG</string>
    <string name="phone_mail_enter">Nhập số điện thoại hoặc email</string>
    <string name="password_enter">Nhập mật khẩu</string>
    <string name="product_infomation">Thông tin sản phẩm</string>
    <string name="update_food">Sửa món</string>
    <string name="save">CẤT</string>
    <string name="delete">Xóa</string>
    <string name="food_name">Tên món <font color="red">*</font></string>
    <string name="price">Giá bán</string>
    <string name="unit">Đơn vị tính <font color="red">*</font></string>
    <string name="color_name">Màu sắc</string>
    <string name="image_name">Biểu tượng</string>
    <string name="status">Trạng thái</string>
    <string name="cancle">Hủy bỏ</string>
    <string name="error">Có lỗi xảy ra, vui lòng thử lại</string>
    <string name="process_success">Thao tác thành công!</string>
    <string name="unit_name">Đơn vị tính</string>
    <string name="caculator_clear">C</string>
    <string name="caculator_decrease">Giảm</string>
    <string name="caculator_increase">Tăng</string>
    <string name="caculator"></string>
    <string name="caculator_7">7</string>
    <string name="caculator_8">8</string>
    <string name="caculator_9">9</string>
    <string name="caculator_sub">-</string>
    <string name="caculator_4">4</string>
    <string name="caculator_5">5</string>
    <string name="caculator_6">6</string>
    <string name="caculator_add">+</string>
    <string name="caculator_1">1</string>
    <string name="caculator_2">2</string>
    <string name="caculator_3">3</string>
    <string name="caculator_negative_number">±</string>
    <string name="caculator_0">0</string>
    <string name="caculator_000">000</string>
    <string name="caculator_dot">,</string>
    <string name="caculator_result">XONG</string>
    <string name="setup_success">Bạn vừa khởi tạo xong thực đơn và có thể bán hàng được ngay với CUKCUK Lite.</string>
    <string name="sell">Bán hàng</string>
    <string name="no_order">Chưa có khách gọi món</string>
    <string name="chart">Báo cáo</string>
    <string name="setting">Thiết lập</string>
    <string name="synchronize">Đồng bộ dữ liệu</string>
    <string name="support">Trợ giúp</string>
    <string name="notification">Thông báo</string>
    <string name="introduce">Giới thiệu cho bạn</string>
    <string name="rate">Đánh giá ứng dụng</string>
    <string name="select_food">Chọn món</string>
    <string name="bill">Thu tiền</string>
    <string name="total_amount">Tổng tiền</string>
    <string name="notification_select_food">Bấm vào đây hoặc dấu + để chọn món</string>
    <string name="remove_order">Hủy</string>
    <string name="enter_table_name">Nhập số bàn</string>
    <string name="enter_people_name">Nhập số người</string>
    <string name="app">CUKCUK LITE</string>
    <string name="remove_confirm">Bạn có chắc chắn muốn hủy các món đã chọn không?</string>
    <string name="remove_confirm_menu">Bạn có chắc chắn muốn xóa món </string>
    <string name="yes">CÓ</string>
    <string name="no">KHÔNG</string>
    <string name="bill_order">HÓA ĐƠN</string>
    <string name="number">Số:</string>
    <string name="table_name">Bàn:</string>
    <string name="date">Ngày:</string>
    <string name="product_name">Tên hàng</string>
    <string name="amount">SL</string>
    <string name="unit_price">Đơn giá</string>
    <string name="total_money">Thành tiền</string>
    <string name="total_moneyy">Số tiền phải trả</string>
    <string name="amount_in">Tiền khách đưa</string>
    <string name="amount_out">Tiền trả lại cho khách</string>
    <string name="accept">ĐỒNG Ý</string>
    <string name="suggest_money">GỢI Ý TIỀN MẶT</string>
    <string name="ten_money">10.000</string>
    <string name="update_status">Đã thu tiền thành công. Vui lòng chọn món mới.</string>
    <string name="add_new_product">Thêm món</string>
    <string name="enter_food_name">Nhập tên món</string>
    <string name="main_report">Doanh thu</string>
    <string name="time">Thời gian</string>
    <string name="time_new">Gần đây</string>
    <string name="time_this_week">Tuần này</string>
    <string name="time_last_week">Tuần trước</string>
    <string name="time_this_month">Tháng này</string>
    <string name="time_last_mont">Tháng trước</string>
    <string name="time_this_year">Năm nay</string>
    <string name="time_last_year">Năm trước</string>
    <string name="time_other">Khác</string>
    <string name="time_last_day">Hôm qua</string>
    <string name="time_this_day">Hôm nay</string>
    <string name="report_with_food">Doanh thu theo mặt hàng</string>
    <string name="unit_name_default">Bao</string>
    <string name="stop_sell">Ngừng bán</string>
    <string name="from_day">Từ ngày</string>
    <string name="end_day">Đến ngày</string>
    <string name="share_with_fiend">Chào bạn. Hãy tải ngay CUKCUK Lite - ứng dụng bán hàng
     miễn phí dành cho các quán nhỏ và quầy di động tại địa chỉ:\n <a>https://mily.vn/mxmwo8A</a>\n
    Xem thông tin chi tiết tại website:\nwww.cukcuk.vn</string>
    <string name="website"><b>Website</b>\nwww.cukcuk.vn</string>
    <string name="copyright"><font color="#919191">Copyright © 2016 - 2021 </font><font color="#0072bb">MISA JSC</font></string>
    <string name="view_misa">https://www.misa.vn/</string>
    <string name="view_website_cukcuk">https://www.cukcuk.vn/</string>
    <string name="view_support">https://help.cukcuk.vn/vi/ac/cukcuk-vn-lite</string>
    <string name="setting_data"><font size="20"></font><font color="black">LẤY LẠI TOÀN BỘ DỮ LIỆU\nChức năng này sẽ tiến hành </font><font color="red">xóa dữ liệu trên thiết bị của bạn</font>
        <font color="black">và thay thế bằng dữ liệu trên máy chủ</font></string>
    <string name="sync_now">ĐỒNG BỘ NGAY</string>
    <string name="sync_end">Đồng bộ lần cuối: <b>02/02/2021 08:23 CH</b></string>
    <string name="register_account_error">Tài khoản, mật khẩu không được bỏ trống.\n Tài khoản
    , mật khẩu có độ dài trên 6 ký tự</string>
    <string name="login_failed">Tài khoản hoặc mật khẩu không đúng</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_fail">Đăng nhập thất bại</string>
    <string name="logout">Đăng xuất</string>
    <string name="account_name">Tài khoản</string>
    <string name="error_network_disconnected">Vui lòng kiểm tra kết nối mạng</string>
    <string name="exists_product">đã được sử dụng. Bạn không được phép xóa</string>
</resources>