<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clDialogOrder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frmHeaderOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_lare"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvResultCaculate"
            style="@style/Theme.TextWhiteSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_smalll"
            android:gravity="left|center"
            android:text="@string/enter_table_name"
            android:textSize="20sp" />

        <ImageView
            style="@style/Theme.EffectClick"
            android:layout_width="@dimen/notification"
            android:layout_height="@dimen/notification"
            android:layout_gravity="right|center"
            android:layout_marginRight="@dimen/margin_right_small"
            android:src="@drawable/ic_dialog_close" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llRowOne"
        style="@style/Theme.ViewMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_small"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frmHeaderOrder">

        <TextView
            android:id="@+id/tvResult"
            style="@style/Theme.TextColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_smalll"
            android:layout_weight="3.97"
            android:background="@drawable/view_enter_phone"
            android:gravity="right|center"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvItemCaculate"
                style="@style/Theme.FontCaculate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />

            <ImageView
                android:id="@+id/ivBackKeyboard"
                android:layout_width="@dimen/height_largee"
                android:layout_height="@dimen/size_larg"
                android:layout_gravity="center"
                android:src="@drawable/ic_dialog_back_keyboard" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRowTwo"
        style="@style/Theme.ViewMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRowOne">

        <TextView
            android:id="@+id/tvItemDown"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_decrease" />

        <TextView
            android:id="@+id/tvItemUp"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_increase" />

        <TextView
            android:id="@+id/tvItemClear"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_clear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRowThree"
        style="@style/Theme.ViewMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRowTwo">

        <TextView
            android:id="@+id/tvItemSeven"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_7" />

        <TextView
            android:id="@+id/tvItemEight"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_8" />

        <TextView
            android:id="@+id/tvItemNine"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRowFour"
        style="@style/Theme.ViewMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRowThree">

        <TextView
            android:id="@+id/tvItemFour"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_4" />

        <TextView
            android:id="@+id/tvItemFive"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_5" />

        <TextView
            android:id="@+id/tvItemSix"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRowFive"
        style="@style/Theme.ViewMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRowFour">

        <TextView
            android:id="@+id/tvItemOne"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_1" />

        <TextView
            android:id="@+id/tvItemTwo"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_2" />

        <TextView
            android:id="@+id/tvItemThree"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/caculator_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRowSix"
        style="@style/Theme.ViewMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_small"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRowFive">

        <TextView
            android:id="@+id/tvItemZero"
            style="@style/Theme.FontCaculate"
            android:layout_width="0dp"
            android:layout_weight="1.94"
            android:text="@string/caculator_0" />

        <TextView
            android:id="@+id/tvSuccess"
            style="@style/Theme.FontTextColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="4.06"
            android:background="@color/purple_500"
            android:text="@string/success" />

        <TextView
            android:id="@+id/tvSuccesss"
            style="@style/Theme.FontTextColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="4.06"
            android:background="@color/purple_500"
            android:text="@string/success"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>